player page setup is done

--- a/mbp_pro_react_app/src/components/styles/forms.css
+++ b/mbp_pro_react_app/src/components/styles/forms.css
@@ -9,3 +9,12 @@
 .center-form {
   margin: auto;
 }
+
+.form-size {
+  width: 50%;
+}
+
+.center-div {
+  display: flex;
+  justify-content: center;
+}
